--- a/newreacttest/src/App.css
+++ b/newreacttest/src/App.css
@@ -28,22 +28,32 @@
 
 .test {
   display: flex;
-  flex-direction: row;
-  width:100%;
-  overflow-wrap: break-word;
-  overflow-y:auto;
+  flex-wrap: wrap;
 }
 
-.content {
-  min-width: 25%;
-  min-height: 100px;
+.test > * {
+  padding: 1rem 1rem;
 }
 
 .menu {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
   max-width: 100%;
+  border: 1px solid #aaa;
+  border-radius: 8px;
+}
+
+.menu > *{
+  flex: 1 1 auto;
+  text-align: center;
+  padding: 1rem;
+}
+
+.menu > *:hover {
+  background-color: green;
 }
 
 .footer {
@@ -52,6 +62,45 @@
 }
 
 .counterButton {
+  display:flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.chatbox {
+  border: 1px solid #aaa;
+  background-color: grey;
+}
+
+.chattitle {
+  margin-bottom: auto;
+  color:white;
+  padding: 1rem;
+}
+
+.innerchatbox {
+  display:flex;
+  height: 40rem;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.incoming{
+  padding: 1rem;
+  background-color: blue;
+  color: white;
+}
+
+.outgoing {
+  text-align: right;
+  padding: 1rem;
+  background-color:orange;
+  color: white;
+}
+
+.messagebox {
+  color:white;
+  padding: 1rem;
   display:flex;
   flex-direction: row;
   gap: 1rem;
