--- a/newreacttest/src/App.css
+++ b/newreacttest/src/App.css
@@ -115,6 +115,10 @@ img {
 .message {
   display:flex;
   background-color: #444;
+  color:white;
   max-width: 16rem;
   width: 16rem;
+  max-height: 4rem;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
