--- a/newreacttest/src/App.css
+++ b/newreacttest/src/App.css
@@ -85,9 +85,12 @@ img {
 
 .innerchatbox {
   display:flex;
-  height: 40rem;
   flex-direction: column;
   justify-content: flex-end;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  height: 40rem;
+  max-height: 40rem;
 }
 
 .incoming{
@@ -110,6 +113,7 @@ img {
   flex-direction: row;
   gap: 1rem;
   align-items: center;
+  max-height:16rem;
 }
 
 .message {
