--- a/newreacttest/src/App.css
+++ b/newreacttest/src/App.css
@@ -84,13 +84,10 @@ img {
 }
 
 .innerchatbox {
-  display:flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  overflow-x: hidden;
+  display: flex;
+  flex-direction: column-reverse;
   overflow-y: scroll;
   height: 40rem;
-  max-height: 40rem;
 }
 
 .incoming{
@@ -116,7 +113,7 @@ img {
   max-height:16rem;
 }
 
-.message {
+.inputMessage {
   display:flex;
   background-color: #444;
   color:white;
